<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:id="@+id/activity_main_navigationbar"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:id="@+id/linear_homepage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@mipmap/home_seclect"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linear1_iv"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/yilan"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:id="@+id/linear1_tv"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_kinds"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@mipmap/search_unselect"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linear2_iv"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:id="@+id/linear2_tv" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_user"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@mipmap/my_unseclect"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linear4_iv"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/user"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:id="@+id/linear4_tv"
            />
    </LinearLayout>

</LinearLayout>